Fix problem with floater line always wrapping.

--- a/src/components/Texts/Text/Span/style.scss
+++ b/src/components/Texts/Text/Span/style.scss
@@ -7,3 +7,12 @@
     position: relative;
     z-index: $zIndex__verseChild__topMost;
 }
+
+.VerseLine__lyricLeft,
+.VerseLine__lyricRight {
+    /**
+     * Fix issue with "floater" line always wrapping for some reason. Do with
+     * both left and right for consistency.
+     */
+    text-wrap: nowrap;
+}
